--- a/style.css
+++ b/style.css
@@ -67,6 +67,15 @@ p {
   text-align: center;
   border-radius: 5px;
   padding: 20px;
+  > h1 {
+    > a {
+      text-decoration: none;
+      color: #333;
+    }
+    > a:hover {
+      color: #4d4dffde;
+    }
+  }
 }
 .app-circle {
   position: relative;
